# copilotkit-langgraph-demo

./: .gitignore  CLAUDE.md  LICENSE  PATTERN-1.md  PATTERN-2.md  PATTERN-3.md  README.md
demo/: PATTERNS.md  ecosystem.config.js  package-lock.json
demo/backend/: copilotkit_v2.py  fixed_agent.py  graph.py  main.py  pyproject.toml  state.py
demo/frontend/: package-lock.json  package.json
demo/frontend/src/app/: layout.tsx  page.tsx
demo/frontend/src/app/api/copilotkit/[[...slug]]/: route.ts
demo/frontend/src/app/components/: CustomInterruptHandler.tsx  DemoNav.tsx  PatternPage.tsx
demo/frontend/src/app/components/shared/: PatternChatPage.tsx  StateControls.tsx  ThreadControls.tsx
demo/frontend/src/app/hooks/: useThreadManager.ts
demo/frontend/src/app/lib/: constants.ts
demo/frontend/src/app/pattern1/: layout.tsx  page.tsx
demo/frontend/src/app/pattern1/state/: page.tsx
demo/frontend/src/app/pattern1/threads/: page.tsx
demo/frontend/src/app/pattern2/: layout.tsx  page.tsx
demo/frontend/src/app/pattern2/state/: page.tsx
demo/frontend/src/app/pattern2/threads/: page.tsx
demo/frontend/src/app/pattern3/: layout.tsx  page.tsx
demo/frontend/src/app/pattern3/state/: page.tsx
demo/frontend/src/app/pattern3/threads/: page.tsx
