[project]
name = "test-copilotkit-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "copilotkit>=0.1.72",
    "langgraph>=1.0.3",
#    "langchain-google-genai>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "ag-ui-langgraph>=0.0.21",
    "python-dotenv>=1.2.1",
    "langchain-openai>=1.1.0",
]
